--- a/assets/sass/dashboard.sass
+++ b/assets/sass/dashboard.sass
@@ -41,7 +41,7 @@ body, html
       flex-direction: column
       justify-content: center
       text-align: center
-      background: #333333
+      background: #4a4a4a
       border-radius: 10px
       margin-bottom: 15px
       min-height: 250px
@@ -52,6 +52,9 @@ body, html
           width: 100px
           height: 100px
           background-color: #FFF
+          background-size: 90% !important
+          background-position: center !important
+          background-repeat: no-repeat !important
           border-radius: 10px
           margin-bottom: 10px
         h1
