--- a/assets/sass/home.sass
+++ b/assets/sass/home.sass
@@ -27,19 +27,42 @@ body, html
 
 .body-container
   padding-top: 250px
-  .main-ad
-    max-width: 600px
-    height: 200px
-    line-height: 200px
-    text-align: center
-    font-size: 13px
-    color: #777
-    font-family: $cairo
-    background: #FFF
-    margin: 0px auto
-    font-weight: 700
-    border-radius: 10px
-    box-shadow: -10px 10px 30px 0px rgba(0,0,0,0.05)
+  max-width: 1400px
+  margin: 0px auto
+  @media screen and (max-width: 1320px)
+
+  .top-ad-container
+    display: flex
+    justify-content: space-between
+    padding: 0px 20px
+    .left-ad
+      display: block
+      width: 300px
+      height: 200px
+      line-height: 200px
+      flex-shrink: 0
+      text-align: center
+      font-size: 13px
+      color: #777
+      font-family: $cairo
+      background: #FFF
+      margin-right: auto
+      font-weight: 700
+      border-radius: 10px
+      box-shadow: -10px 10px 30px 0px rgba(0,0,0,0.05)
+    .main-ad
+      width: 600px
+      height: 200px
+      line-height: 200px
+      text-align: center
+      font-size: 13px
+      color: #777
+      font-family: $cairo
+      background: #FFF
+      margin-left: auto
+      font-weight: 700
+      border-radius: 10px
+      box-shadow: -10px 10px 30px 0px rgba(0,0,0,0.05)
   .body-wrapper
     display: flex
     padding: 50px 20px
@@ -251,40 +274,61 @@ body, html
         display: flex
         flex-wrap: wrap
         margin-left: 20px
-        justify-content: center
+        justify-content: flex-end
+        margin-left: auto
+        max-width: 1000px
+        @media screen and (max-width: 1320px)
+          max-width: 800px
         .ad
-          background: #7C0C10
-          height: 150px
-          width: 430px
+          background: #F8F8F8
+          min-height: 250px
+          width: 230px
           margin-right: 10px
           margin-bottom: 20px
           position: relative
           box-sizing: border-box
           padding: 20px
-          padding-left: 130px
-          text-align: right
+          padding-right: 45px
+          padding-left: 45px
+          padding-bottom: 50px
+          text-align: center
           overflow: hidden
           font-family: $cairo
           transition: background 0.3s
-          &:nth-child(2n+0)
-            margin-right: 0px
-          .logo-container
+          border-radius: 10px
+          .abstract
             position: absolute
-            top: 50%
-            transform: translateY(-50%)
-            left: 10px
-            background: #F1F1F1
-            height: calc(100% - 20px)
-            width: 120px
-            border-radius: 10px 50% 50% 10px
-            text-align: center
-            transition: 0.3s
-            img, svg
-              position: absolute
-              top: 50%
-              left: 20px
-              transform: translateY(-50%)
-              height: 80px
+            bottom: 0px
+            left: 0px
+            width: 100%
+            height: 11px
+            background: url("../svg/ad-bottom.svg")
+            background-size: cover
+            background-position: bottom
+            border-radius: 0px 0px 10px 10px
+          &::after
+            content: ""
+            width: 50px
+            height: 50px
+            background: url("../svg/ad-top-right.svg")
+            position: absolute
+            top: 0px
+            right: 0px
+            background-size: cover
+            background-position: top right
+          &::before
+            content: ""
+            width: 50px
+            height: 50px
+            background: url("../svg/ad-bottom-left.svg")
+            position: absolute
+            bottom: 0px
+            left: 0px
+            background-size: cover
+            background-position: bottom left
+          .logo
+            height: 80px
+            margin: 0px auto
           .hidden-link
             position: absolute
             top: 0px
@@ -293,17 +337,22 @@ body, html
             height: 100%
             z-index: 1
           .name
-            color: #FFF
+            color: #4A4A4A
             margin: 0px
+            text-align: center
           .category
-            color: rgba(#FFFFFF,0.8)
+            color: #777
             font-size: 12px
           svg
-            position: absolute
-            bottom: -5px
-            right: 20px
+              position: absolute
+              bottom: -50px
+              right: 20px
+              transform: translateY(-50%)
+              height: 80px
+              path
+                fill: #E6474C
           &:hover
-            background: #333
+            background: #f5f5f5
             .logo-container
               border-radius: 40px 20px
       .all-ads
@@ -380,6 +429,7 @@ body, html
       position: relative
       padding-bottom: 40px
       margin-left: 20px
+      flex-shrink: 0
       .cover
         display: block
         height: 150px
