--- a/assets/sass/home.sass
+++ b/assets/sass/home.sass
@@ -289,7 +289,7 @@ body, html
           margin-bottom: 20px
           position: relative
           box-sizing: border-box
-          padding: 20px
+          padding-top: 45px
           padding-right: 45px
           padding-left: 45px
           padding-bottom: 50px
@@ -329,7 +329,8 @@ body, html
             background-size: cover
             background-position: bottom left
           .logo
-            height: 80px
+            max-width: 90%
+            max-height: 80px
             margin: 0px auto
           .hidden-link
             position: absolute
@@ -347,11 +348,12 @@ body, html
             font-size: 12px
           svg
               position: absolute
-              bottom: -50px
+              bottom: -40px
               right: 20px
               transform: translateY(-50%)
               height: 80px
-              path
+              width: 80px
+              path, circle
                 fill: #E6474C
           &:hover
             background: #f5f5f5
